# notebooks

./: .editorconfig  .gitignore  Dockerfile  README.md  RELEASE.md  docker-compose.yml  requirements.txt
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: publish.yml
use_case_aptos/: use_case_aptos.ipynb
use_case_aptos/scripts/: helpers.py  model.py  train.py
use_case_dimlpfidex/: breastCancerWisconsin.ipynb  cracks.ipynb  gui.ipynb  mnist.ipynb  obesityCvdRisk.ipynb  omniXai_dimlpfidex.ipynb
use_case_dimlpfidex/data/BCWTemplates/: config_fidex.json  config_fidexGlo.json  config_fidexGloRules.json  config_fidexOne.json
use_case_dimlpfidex/data/OCDDataset/: RF_rules.rls  (+9 more)
use_case_sport_classification/: Dockerfile  README.md  cam_demo.ipynb  features_map_test.csv  pyproject.toml  requirements-all.txt  requirements-freeze-colab.txt  requirements.txt  rules_extraction_demo.ipynb  sport_image_classification.ipynb  use_case_sport_image_classification.ipynb
use_case_sport_classification/binary_dataset_test/: amputefootball_filtered.csv  amputefootball_filtered_good.csv
use_case_sport_classification/binary_dataset_train/: amputefootball_filtered_good.csv
use_case_sport_classification/data/: class_dict.json  top_rules_axethrowing.json
use_case_sport_classification/notebooks/: sport_image_classification.ipynb
use_case_sport_classification/scripts/: custom_dataset.py  evaluate.py  feature_visualizer.py  find_filters.py  finetuneefficientnet.py  helpers.py  models.py  sport_dataset.py  train.py  vgg16.py
