[tool.poetry]
name = "use-case-sport-classification"
version = "0.1.0"
description = "HES-XPLAIN notebook"
authors = ["Arthur Babey <arthur.babey@heig-vd.ch>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "use_case_sport_classification"}]

[tool.poetry.dependencies]
python = "^3.8.1"
torch = "^2.0.1"
pandas = "^2.0.2"
jupyterlab = "^4.0.2"
omnixai = "^1.3.0"
nvidia-curand-cu11 = "^10.3.0.86"
nvidia-cufft-cu11 = "^10.9.0.58"
nvidia-cublas-cu11 = "^11.11.3.6"
nvidia-cudnn-cu11 = "^8.9.2.26"
nvidia-cuda-nvrtc-cu11 = "^11.8.89"
nvidia-cuda-runtime-cu11 = "^11.8.89"
nvidia-cuda-cupti-cu11 = "11.7.101"
nvidia-cusolver-cu11 = "^11.4.1.48"
nvidia-cusparse-cu11 = "^11.7.5.86"
nvidia-nccl-cu11 = "^2.18.3"
nvidia-nvtx-cu11 = "^11.8.86"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
plotly = "^5.15.0"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
